--- a/blog-info.html
+++ b/blog-info.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/icomoon.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/rj-style.css">
+    <link rel="stylesheet" href="assets/css/dv-style.css">
 </head>
 <body>
 
@@ -23,7 +23,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav rj-right-menu align-items-xl-center ms-auto pe-0 mb-3 mb-lg-0">
+                <ul class="navbar-nav dv-right-menu align-items-xl-center ms-auto pe-0 mb-3 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="Sofa" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false">
@@ -49,15 +49,15 @@
                     </li>
                 </ul>
                 <div class="d-flex flex-column flex-sm-row align-items-sm-center">
-                    <form class="d-flex rj-header-form mb-3 mb-sm-0">
+                    <form class="d-flex dv-header-form mb-3 mb-sm-0">
                         <button type="submit">
                             <span class="icon-Icon---Search"></span>
                         </button>
                         <input class="form-control" type="search" name="search" placeholder="جستجو" aria-label="Search">
                     </form>
                     <ul class="navbar-nav flex-row align-items-center">
-                        <li class="nav-item dropdown rj-user-dropdown me-3">
-                            <a class="nav-link dropdown-toggle rj-user-image-link" href="#" id="userImage" role="button"
+                        <li class="nav-item dropdown dv-user-dropdown me-3">
+                            <a class="nav-link dropdown-toggle dv-user-image-link" href="#" id="userImage" role="button"
                                data-bs-toggle="dropdown" aria-expanded="false">
                                 <img src="assets/images/user.png" class="img-cover" alt="مبل ایده آل">
                             </a>
@@ -65,12 +65,12 @@
                                 <li><a class="dropdown-item" href="#">حساب کاربری</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item rj-header-icon ms-4">
+                        <li class="nav-item dv-header-icon ms-4">
                             <a class="nav-link" href="cart.html">
                                 <span class="icon-Icon---Cart"></span>
                             </a>
                         </li>
-                        <li class="nav-item rj-header-icon">
+                        <li class="nav-item dv-header-icon">
                             <a class="nav-link" href="interest.html">
                                 <span class="icon-Icon---Heart"></span>
                             </a>
@@ -229,10 +229,10 @@
                     <div class="d-flex flex-column">
                         <span class="dv-footer-news-title mb-3">اطلاع از اخرین تخفیفات</span>
                         <form class="d-flex">
-                            <input class="form-control rj-footer-email-input ms-2" type="email" name="email"
+                            <input class="form-control dv-footer-email-input ms-2" type="email" name="email"
                                    placeholder="ایمیل خود را وارد کنید"
                                    aria-label="Search">
-                            <button class="rj-footer-submit-button" type="submit">
+                            <button class="dv-footer-submit-button" type="submit">
                                 <span class="icon-carbonsend-alt-filled"></span>
                             </button>
                         </form>
