--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/icomoon.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/rj-style.css">
+    <link rel="stylesheet" href="assets/css/dv-style.css">
 </head>
 <body>
 
@@ -23,7 +23,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav rj-right-menu align-items-xl-center ms-auto pe-0 mb-3 mb-lg-0">
+                <ul class="navbar-nav dv-right-menu align-items-xl-center ms-auto pe-0 mb-3 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="Sofa" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false">
@@ -49,15 +49,15 @@
                     </li>
                 </ul>
                 <div class="d-flex flex-column flex-sm-row align-items-sm-center">
-                    <form class="d-flex rj-header-form mb-3 mb-sm-0">
+                    <form class="d-flex dv-header-form mb-3 mb-sm-0">
                         <button type="submit">
                             <span class="icon-Icon---Search"></span>
                         </button>
                         <input class="form-control" type="search" name="search" placeholder="جستجو" aria-label="Search">
                     </form>
                     <ul class="navbar-nav flex-row align-items-center">
-                        <li class="nav-item dropdown rj-user-dropdown me-3">
-                            <a class="nav-link dropdown-toggle rj-user-image-link" href="#" id="userImage" role="button"
+                        <li class="nav-item dropdown dv-user-dropdown me-3">
+                            <a class="nav-link dropdown-toggle dv-user-image-link" href="#" id="userImage" role="button"
                                data-bs-toggle="dropdown" aria-expanded="false">
                                 <img src="assets/images/user.png" class="img-cover" alt="مبل ایده آل">
                             </a>
@@ -65,12 +65,12 @@
                                 <li><a class="dropdown-item" href="#">حساب کاربری</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item rj-header-icon ms-4">
+                        <li class="nav-item dv-header-icon ms-4">
                             <a class="nav-link" href="cart.html">
                                 <span class="icon-Icon---Cart"></span>
                             </a>
                         </li>
-                        <li class="nav-item rj-header-icon">
+                        <li class="nav-item dv-header-icon">
                             <a class="nav-link" href="interest.html">
                                 <span class="icon-Icon---Heart"></span>
                             </a>
@@ -89,8 +89,8 @@
             <div class="row g-3">
                 <div class="col-12 col-xl-7">
                     <div class="d-flex flex-column flex-sm-row align-items-sm-center justify-content-sm-between">
-                        <span class="rj-search-title mb-2 mb-sm-0">چه چیزی بخونم؟</span>
-                        <form class="d-flex rj-top-banner-form mb-3 mb-sm-0">
+                        <span class="dv-search-title mb-2 mb-sm-0">چه چیزی بخونم؟</span>
+                        <form class="d-flex dv-top-banner-form mb-3 mb-sm-0">
                             <button type="submit">
                                 <span class="icon-Icon---Search"></span>
                             </button>
@@ -102,16 +102,16 @@
                 <div class="col-12 col-xl-5 d-flex justify-content-sm-end">
                     <div class="w-100 d-flex align-items-center justify-content-between justify-content-md-end">
                         <div class="d-flex align-items-center mb-2 mb-sm-0">
-                            <a href="#" class="rj-top-banner-social-link px-1">
+                            <a href="#" class="dv-top-banner-social-link px-1">
                                 <span class="icon-linkedin-bg"></span>
                             </a>
-                            <a href="#" class="rj-top-banner-social-link px-1">
+                            <a href="#" class="dv-top-banner-social-link px-1">
                                 <span class="icon-instagram-bg"></span>
                             </a>
-                            <a href="#" class="rj-top-banner-social-link px-1">
+                            <a href="#" class="dv-top-banner-social-link px-1">
                                 <span class="icon-twiter-bg"></span>
                             </a>
-                            <a href="#" class="rj-top-banner-social-link px-1">
+                            <a href="#" class="dv-top-banner-social-link px-1">
                                 <span class="icon-telegram-bg"></span>
                             </a>
                         </div>
@@ -132,13 +132,13 @@
                                 <h3 class="text-center">ساخت گلهای زیبا بخشی
                                     از زندگی شما است.</h3>
                                 <div class="d-flex flex-column">
-                                    <span class="text-center rj-blog-item-username mb-4">جیمز وات</span>
-                                    <span class="icon-double-quotes rj-blog-item-icon text-start"></span>
+                                    <span class="text-center dv-blog-item-username mb-4">جیمز وات</span>
+                                    <span class="icon-double-quotes dv-blog-item-icon text-start"></span>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
-                            <div class="rj-blog-card">
+                            <div class="dv-blog-card">
                                 <a href="blog-info.html">
                                     <div class="card-img-top">
                                         <img src="assets/images/flower7-min.png" class="img-cover" alt="مبل ایده آل">
@@ -155,7 +155,7 @@
                                             نگارش متن می توانند تنها با یک کپی و پست این متن را در کادرهای مختلف جایگزین
                                             نمائید. این نوشته توسط سایت لورم ایپسوم فارسی نگاشته شده است.</p>
                                         <a href="blog-info.html" class="d-flex align-items-center justify-content-end">
-                                            <span class="text-red f-14 rj-blog-info-link">ادامه مطلب</span>
+                                            <span class="text-red f-14 dv-blog-info-link">ادامه مطلب</span>
                                             <span class="icon-doble-left-arrow pe-2"></span>
                                         </a>
                                     </div>
@@ -163,7 +163,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="rj-blog-card">
+                            <div class="dv-blog-card">
                                 <a href="blog-info.html">
                                     <div class="card-img-top">
                                         <img src="assets/images/flower3-min.png" class="img-cover" alt="مبل ایده آل">
@@ -180,7 +180,7 @@
                                             نگارش متن می توانند تنها با یک کپی و پست این متن را در کادرهای مختلف جایگزین
                                             نمائید. این نوشته توسط سایت لورم ایپسوم فارسی نگاشته شده است.</p>
                                         <a href="blog-info.html" class="d-flex align-items-center justify-content-end">
-                                            <span class="text-red f-14 rj-blog-info-link">ادامه مطلب</span>
+                                            <span class="text-red f-14 dv-blog-info-link">ادامه مطلب</span>
                                             <span class="icon-doble-left-arrow pe-2"></span>
                                         </a>
                                     </div>
@@ -188,7 +188,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="rj-blog-card">
+                            <div class="dv-blog-card">
                                 <a href="blog-info.html">
                                     <div class="card-img-top">
                                         <img src="assets/images/flower7-min.png" class="img-cover" alt="مبل ایده آل">
@@ -205,7 +205,7 @@
                                             نگارش متن می توانند تنها با یک کپی و پست این متن را در کادرهای مختلف جایگزین
                                             نمائید. این نوشته توسط سایت لورم ایپسوم فارسی نگاشته شده است.</p>
                                         <a href="blog-info.html" class="d-flex align-items-center justify-content-end">
-                                            <span class="text-red f-14 rj-blog-info-link">ادامه مطلب</span>
+                                            <span class="text-red f-14 dv-blog-info-link">ادامه مطلب</span>
                                             <span class="icon-doble-left-arrow pe-2"></span>
                                         </a>
                                     </div>
@@ -213,7 +213,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="rj-blog-card">
+                            <div class="dv-blog-card">
                                 <a href="blog-info.html">
                                     <div class="card-img-top">
                                         <img src="assets/images/flower3-min.png" class="img-cover" alt="مبل ایده آل">
@@ -230,7 +230,7 @@
                                             نگارش متن می توانند تنها با یک کپی و پست این متن را در کادرهای مختلف جایگزین
                                             نمائید. این نوشته توسط سایت لورم ایپسوم فارسی نگاشته شده است.</p>
                                         <a href="blog-info.html" class="d-flex align-items-center justify-content-end">
-                                            <span class="text-red f-14 rj-blog-info-link">ادامه مطلب</span>
+                                            <span class="text-red f-14 dv-blog-info-link">ادامه مطلب</span>
                                             <span class="icon-doble-left-arrow pe-2"></span>
                                         </a>
                                     </div>
@@ -242,13 +242,13 @@
                                 <h3 class="text-center">ساخت گلهای زیبا بخشی
                                     از زندگی شما است.</h3>
                                 <div class="d-flex flex-column">
-                                    <span class="text-center rj-blog-item-username mb-4">جیمز وات</span>
-                                    <span class="icon-double-quotes rj-blog-item-icon text-start"></span>
+                                    <span class="text-center dv-blog-item-username mb-4">جیمز وات</span>
+                                    <span class="icon-double-quotes dv-blog-item-icon text-start"></span>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
-                            <div class="rj-blog-card">
+                            <div class="dv-blog-card">
                                 <a href="blog-info.html">
                                     <div class="card-img-top">
                                         <img src="assets/images/flower4-min.png" class="img-cover" alt="مبل ایده آل">
@@ -265,7 +265,7 @@
                                             نگارش متن می توانند تنها با یک کپی و پست این متن را در کادرهای مختلف جایگزین
                                             نمائید. این نوشته توسط سایت لورم ایپسوم فارسی نگاشته شده است.</p>
                                         <a href="blog-info.html" class="d-flex align-items-center justify-content-end">
-                                            <span class="text-red f-14 rj-blog-info-link">ادامه مطلب</span>
+                                            <span class="text-red f-14 dv-blog-info-link">ادامه مطلب</span>
                                             <span class="icon-doble-left-arrow pe-2"></span>
                                         </a>
                                     </div>
@@ -273,7 +273,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="rj-blog-card">
+                            <div class="dv-blog-card">
                                 <a href="blog-info.html">
                                     <div class="card-img-top">
                                         <img src="assets/images/flower5-min.png" class="img-cover" alt="مبل ایده آل">
@@ -290,7 +290,7 @@
                                             نگارش متن می توانند تنها با یک کپی و پست این متن را در کادرهای مختلف جایگزین
                                             نمائید. این نوشته توسط سایت لورم ایپسوم فارسی نگاشته شده است.</p>
                                         <a href="blog-info.html" class="d-flex align-items-center justify-content-end">
-                                            <span class="text-red f-14 rj-blog-info-link">ادامه مطلب</span>
+                                            <span class="text-red f-14 dv-blog-info-link">ادامه مطلب</span>
                                             <span class="icon-doble-left-arrow pe-2"></span>
                                         </a>
                                     </div>
@@ -298,7 +298,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="rj-blog-card">
+                            <div class="dv-blog-card">
                                 <a href="blog-info.html">
                                     <div class="card-img-top">
                                         <img src="assets/images/flower3-min.png" class="img-cover" alt="مبل ایده آل">
@@ -315,7 +315,7 @@
                                             نگارش متن می توانند تنها با یک کپی و پست این متن را در کادرهای مختلف جایگزین
                                             نمائید. این نوشته توسط سایت لورم ایپسوم فارسی نگاشته شده است.</p>
                                         <a href="blog-info.html" class="d-flex align-items-center justify-content-end">
-                                            <span class="text-red f-14 rj-blog-info-link">ادامه مطلب</span>
+                                            <span class="text-red f-14 dv-blog-info-link">ادامه مطلب</span>
                                             <span class="icon-doble-left-arrow pe-2"></span>
                                         </a>
                                     </div>
@@ -323,7 +323,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="rj-blog-card">
+                            <div class="dv-blog-card">
                                 <a href="blog-info.html">
                                     <div class="card-img-top">
                                         <img src="assets/images/flower5-min.png" class="img-cover" alt="مبل ایده آل">
@@ -340,7 +340,7 @@
                                             نگارش متن می توانند تنها با یک کپی و پست این متن را در کادرهای مختلف جایگزین
                                             نمائید. این نوشته توسط سایت لورم ایپسوم فارسی نگاشته شده است.</p>
                                         <a href="blog-info.html" class="d-flex align-items-center justify-content-end">
-                                            <span class="text-red f-14 rj-blog-info-link">ادامه مطلب</span>
+                                            <span class="text-red f-14 dv-blog-info-link">ادامه مطلب</span>
                                             <span class="icon-doble-left-arrow pe-2"></span>
                                         </a>
                                     </div>
@@ -348,7 +348,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="rj-blog-card">
+                            <div class="dv-blog-card">
                                 <a href="blog-info.html">
                                     <div class="card-img-top">
                                         <img src="assets/images/flower3-min.png" class="img-cover" alt="مبل ایده آل">
@@ -365,7 +365,7 @@
                                             نگارش متن می توانند تنها با یک کپی و پست این متن را در کادرهای مختلف جایگزین
                                             نمائید. این نوشته توسط سایت لورم ایپسوم فارسی نگاشته شده است.</p>
                                         <a href="blog-info.html" class="d-flex align-items-center justify-content-end">
-                                            <span class="text-red f-14 rj-blog-info-link">ادامه مطلب</span>
+                                            <span class="text-red f-14 dv-blog-info-link">ادامه مطلب</span>
                                             <span class="icon-doble-left-arrow pe-2"></span>
                                         </a>
                                     </div>
@@ -377,8 +377,8 @@
                                 <h3 class="text-center">ساخت گلهای زیبا بخشی
                                     از زندگی شما است.</h3>
                                 <div class="d-flex flex-column">
-                                    <span class="text-center rj-blog-item-username mb-4">جیمز وات</span>
-                                    <span class="icon-double-quotes rj-blog-item-icon text-start"></span>
+                                    <span class="text-center dv-blog-item-username mb-4">جیمز وات</span>
+                                    <span class="icon-double-quotes dv-blog-item-icon text-start"></span>
                                 </div>
                             </div>
                         </div>
@@ -514,10 +514,10 @@
                     <div class="d-flex flex-column">
                         <span class="dv-footer-news-title mb-3">اطلاع از اخرین تخفیفات</span>
                         <form class="d-flex">
-                            <input class="form-control rj-footer-email-input ms-2" type="email" name="email"
+                            <input class="form-control dv-footer-email-input ms-2" type="email" name="email"
                                    placeholder="ایمیل خود را وارد کنید"
                                    aria-label="Search">
-                            <button class="rj-footer-submit-button" type="submit">
+                            <button class="dv-footer-submit-button" type="submit">
                                 <span class="icon-carbonsend-alt-filled"></span>
                             </button>
                         </form>
