optimize images and add interest page

--- a/cart-address.html
+++ b/cart-address.html
@@ -4,7 +4,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>مبل ایده آل | افزودن آدرس تحویل</title>
-    <link rel="shortcut icon" href="assets/images/doraaal.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logo.ico" type="image/x-icon">
     <!--    Logo with ico format-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/icomoon.css">
@@ -205,6 +205,7 @@
     </div>
 </main>
 
+<!--footer-->
 <footer id="footer">
     <div class="container mt-3">
         <div class="dv-footer-content pb-5">
@@ -218,19 +219,19 @@
                                 </a>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
-                                <a class="dv-footer-links-list-link" target="_blank" href="#">محصولات</a>
+                                <a class="dv-footer-links-list-link" target="_blank" href="products.html">محصولات</a>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
-                                <a class="dv-footer-links-list-link" target="_blank" href="#">تخفیفات</a>
+                                <a class="dv-footer-links-list-link" target="_blank" href="products.html">تخفیفات</a>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
-                                <a class="dv-footer-links-list-link" target="_blank" href="#">مبلمان</a>
+                                <a class="dv-footer-links-list-link" target="_blank" href="products.html">مبلمان</a>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
-                                <a class="dv-footer-links-list-link" target="_blank" href="#">سرویس خواب</a>
+                                <a class="dv-footer-links-list-link" target="_blank" href="products.html">سرویس خواب</a>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
-                                <a class="dv-footer-links-list-link" target="_blank" href="#">دکوراتیو</a>
+                                <a class="dv-footer-links-list-link" target="_blank" href="products.html">دکوراتیو</a>
                             </li>
                         </ul>
                         <ul class="dv-footer-links-list">
@@ -238,16 +239,16 @@
                                 <span>لینک های مهم</span>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
-                                <a class="dv-footer-links-list-link" target="_blank" href="#">تماس با ما</a>
+                                <a class="dv-footer-links-list-link" target="_blank" href="contact-us.html">تماس با ما</a>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
-                                <a class="dv-footer-links-list-link" target="_blank" href="#">درباره ما</a>
+                                <a class="dv-footer-links-list-link" target="_blank" href="contact-us.html">درباره ما</a>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
-                                <a class="dv-footer-links-list-link" target="_blank" href="#">سبد خرید</a>
+                                <a class="dv-footer-links-list-link" target="_blank" href="cart.html">سبد خرید</a>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
-                                <a class="dv-footer-links-list-link" target="_blank" href="#">وبلاگ</a>
+                                <a class="dv-footer-links-list-link" target="_blank" href="blog.html">وبلاگ</a>
                             </li>
                         </ul>
                     </div>
