minify jc and css

--- a/cart.html
+++ b/cart.html
@@ -8,8 +8,7 @@
     <!--    Logo with ico format-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/icomoon.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/dv-style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
 
@@ -325,6 +324,6 @@
 
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/index.js"></script>
+<script src="assets/js/index.min.js"></script>
 </body>
 </html>
