--- a/contact-us.html
+++ b/contact-us.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/icomoon.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/dv-style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
 
@@ -415,7 +414,7 @@
 <script src="assets/js/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
-<script src="assets/js/index.js"></script>
+<script src="assets/js/index.min.js"></script>
 
 <script>
 
