--- a/cart-address-information.html
+++ b/cart-address-information.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/icomoon.css">
     <link rel="stylesheet" href="assets/css/select2.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
 
@@ -337,7 +337,7 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/select2.min.js"></script>
-<script src="assets/js/index.js"></script>
+<script src="assets/js/index.min.js"></script>
 
 <script>
     $(".province-select").select2({
