--- a/product-info.html
+++ b/product-info.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/fonts/icomoon.css">
     <link rel="stylesheet" href="assets/css/swiper.css">
     <link rel="stylesheet" href="assets/css/swiper-custom.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
 <!--header-->
@@ -682,7 +682,7 @@
 <script src="assets/js/jquery-3.6.0.min.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/swiper.js"></script>
-<script src="assets/js/index.js"></script>
+<script src="assets/js/index.min.js"></script>
 
 </body>
 </html>
